--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,48 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+/.idea/.idea.Connected/.idea/.name
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847.xml
+/Connected.Api/Migrations/20201024195940_init.cs
+/Connected.Api/Migrations/20201024195940_init.Designer.cs
+/Connected.Api/Migrations/20201024200441_gf.cs
+/Connected.Api/Migrations/20201024200441_gf.Designer.cs
+/Connected.Api/Migrations/20201024200459_gf2.cs
+/Connected.Api/Migrations/20201024200459_gf2.Designer.cs
+/Connected.Api/Migrations/20201024200956_gf3.cs
+/Connected.Api/Migrations/20201024200956_gf3.Designer.cs
+/Connected.Api/Migrations/20201024201719_gf4.cs
+/Connected.Api/Migrations/20201024201719_gf4.Designer.cs
+/Connected.Api/Migrations/20201024202051_gf5.cs
+/Connected.Api/Migrations/20201024202051_gf5.Designer.cs
+/Connected.Api/Migrations/20201024202415_itemscoms.cs
+/Connected.Api/Migrations/20201024202415_itemscoms.Designer.cs
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA.meta
+/Connected.Api/Migrations/ConnectedContextModelSnapshot.cs
+/.idea/.idea.Connected/.idea/contentModel.xml
+/.idea/.idea.Connected/.idea/dataSources.local.xml
+/.idea/.idea.Connected/.idea/dataSources.xml
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_accessadmin.KqpDJg.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_backupoperator.R9Ifpg.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_datareader.To823g.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_datawriter._tp55w.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_ddladmin.hGWOrg.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_denydatareader.2lWItw.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_denydatawriter.iqHLwA.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_owner.souIfA.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/db_securityadmin.Dj5jKg.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/dbo.sYMBAA.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/master.YiqNvw/schema/dbo.sYMBAA.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/master.YiqNvw/schema/dbo.sYMBAA.zip
+/.idea/.idea.Connected/.idea/encodings.xml
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/guest.2C3iBQ.meta
+/.idea/.idea.Connected/.idea/indexLayout.xml
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/INFORMATION_SCHEMA.NBgcMw.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/master.YiqNvw/schema/INFORMATION_SCHEMA.NBgcMw.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/master.YiqNvw.meta
+/.idea/.idea.Connected/.idea/modules.xml
+/.idea/.idea.Connected/.idea/projectSettingsUpdater.xml
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/Connected.6RLsVA/schema/sys.zb4BAA.meta
+/.idea/.idea.Connected/.idea/dataSources/849e91a0-2c7c-4a66-9c51-4b4c2ab94847/storage_v2/_src_/database/master.YiqNvw/schema/sys.zb4BAA.meta
+/.idea/.idea.Connected/.idea/vcs.xml
+/.idea/.idea.Connected/.idea/workspace.xml
