--- a/Connected.Api/Connected.Api.csproj
+++ b/Connected.Api/Connected.Api.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" />
+        <PackageReference Include="Seq.Extensions.Logging" Version="5.0.0-dev-00067" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
